{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 428,
  "lineage": "7991eb2b-ce1e-2b20-5190-d234da088164",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "blue",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:targetgroup/bdemo-20201119210652694400000001/1537cc94578b21be",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:listener-rule/app/justin-demo-alb/af389b7de0f82727/1569464a1e7e9ed0/84a7dc135ea73d02",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/blue*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:210780328849:listener-rule/app/justin-demo-alb/af389b7de0f82727/1569464a1e7e9ed0/84a7dc135ea73d02",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:listener/app/justin-demo-alb/af389b7de0f82727/1569464a1e7e9ed0",
            "priority": 2
          },
          "dependencies": [
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_listener.frontend_http_tcp",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.sgs.aws_security_group.allow_http_all",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.module.vpc.aws_vpc_endpoint.config",
            "module.vpc.module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.module.vpc.aws_vpc_endpoint.events",
            "module.vpc.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.module.vpc.aws_vpc_endpoint.states",
            "module.vpc.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "green",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:targetgroup/gdemo-20201119210652694500000003/cef0c9bf778c9f91",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:listener-rule/app/justin-demo-alb/af389b7de0f82727/1569464a1e7e9ed0/9c31db4ae795657c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/green*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:210780328849:listener-rule/app/justin-demo-alb/af389b7de0f82727/1569464a1e7e9ed0/9c31db4ae795657c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:listener/app/justin-demo-alb/af389b7de0f82727/1569464a1e7e9ed0",
            "priority": 1
          },
          "dependencies": [
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_listener.frontend_http_tcp",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.sgs.aws_security_group.allow_http_all",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.module.vpc.aws_vpc_endpoint.config",
            "module.vpc.module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.module.vpc.aws_vpc_endpoint.events",
            "module.vpc.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.module.vpc.aws_vpc_endpoint.states",
            "module.vpc.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:loadbalancer/app/justin-demo-alb/af389b7de0f82727",
            "arn_suffix": "app/justin-demo-alb/af389b7de0f82727",
            "dns_name": "justin-demo-alb-1999164981.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:210780328849:loadbalancer/app/justin-demo-alb/af389b7de0f82727",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "justin-demo-alb",
            "security_groups": [
              "sg-0f68191c211ec5469"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f46bbc5a7b203af"
              },
              {
                "subnet_id": "subnet-0eb297f9f090092da"
              },
              {
                "subnet_id": "subnet-0f7749f9f5dba3d2b"
              }
            ],
            "subnets": [
              "subnet-00f46bbc5a7b203af",
              "subnet-0eb297f9f090092da",
              "subnet-0f7749f9f5dba3d2b"
            ],
            "tags": {
              "Environment": "Test",
              "Name": "justin-demo-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0c53ae7fc7394e80b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.sgs.aws_security_group.allow_http_all",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.module.vpc.aws_vpc_endpoint.config",
            "module.vpc.module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.module.vpc.aws_vpc_endpoint.events",
            "module.vpc.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.module.vpc.aws_vpc_endpoint.states",
            "module.vpc.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:listener/app/justin-demo-alb/af389b7de0f82727/1569464a1e7e9ed0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:targetgroup/jdemo-20201119210652694400000002/ae7e67eea47fd0d1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:210780328849:listener/app/justin-demo-alb/af389b7de0f82727/1569464a1e7e9ed0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:loadbalancer/app/justin-demo-alb/af389b7de0f82727",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.module.alb.aws_lb.this",
            "module.alb.module.alb.aws_lb_target_group.main",
            "module.sgs.aws_security_group.allow_http_all",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.module.vpc.aws_vpc_endpoint.config",
            "module.vpc.module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.module.vpc.aws_vpc_endpoint.events",
            "module.vpc.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.module.vpc.aws_vpc_endpoint.states",
            "module.vpc.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "module.alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:targetgroup/jdemo-20201119210652694400000002/ae7e67eea47fd0d1",
            "arn_suffix": "targetgroup/jdemo-20201119210652694400000002/ae7e67eea47fd0d1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:210780328849:targetgroup/jdemo-20201119210652694400000002/ae7e67eea47fd0d1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jdemo-20201119210652694400000002",
            "name_prefix": "jdemo-",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "jdemo-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c53ae7fc7394e80b"
          },
          "dependencies": [
            "module.alb.module.alb.aws_lb.this",
            "module.sgs.aws_security_group.allow_http_all",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.module.vpc.aws_vpc_endpoint.config",
            "module.vpc.module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.module.vpc.aws_vpc_endpoint.events",
            "module.vpc.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.module.vpc.aws_vpc_endpoint.states",
            "module.vpc.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:targetgroup/gdemo-20201119210652694500000003/cef0c9bf778c9f91",
            "arn_suffix": "targetgroup/gdemo-20201119210652694500000003/cef0c9bf778c9f91",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:210780328849:targetgroup/gdemo-20201119210652694500000003/cef0c9bf778c9f91",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "gdemo-20201119210652694500000003",
            "name_prefix": "gdemo-",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "gdemo-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c53ae7fc7394e80b"
          },
          "dependencies": [
            "module.alb.module.alb.aws_lb.this",
            "module.sgs.aws_security_group.allow_http_all",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.module.vpc.aws_vpc_endpoint.config",
            "module.vpc.module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.module.vpc.aws_vpc_endpoint.events",
            "module.vpc.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.module.vpc.aws_vpc_endpoint.states",
            "module.vpc.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:210780328849:targetgroup/bdemo-20201119210652694400000001/1537cc94578b21be",
            "arn_suffix": "targetgroup/bdemo-20201119210652694400000001/1537cc94578b21be",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:210780328849:targetgroup/bdemo-20201119210652694400000001/1537cc94578b21be",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "bdemo-20201119210652694400000001",
            "name_prefix": "bdemo-",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "bdemo-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c53ae7fc7394e80b"
          },
          "dependencies": [
            "module.alb.module.alb.aws_lb.this",
            "module.sgs.aws_security_group.allow_http_all",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.module.vpc.aws_vpc_endpoint.config",
            "module.vpc.module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.module.vpc.aws_vpc_endpoint.events",
            "module.vpc.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.module.vpc.aws_vpc_endpoint.states",
            "module.vpc.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_alb_sg",
      "provider": "module.sgs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:security-group/sg-08ddee6bf68415b2d",
            "description": "Allow inbound traffic from ALBs sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ddee6bf68415b2d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP allow from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f68191c211ec5469"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_alb_sg",
            "name_prefix": "",
            "owner_id": "210780328849",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c53ae7fc7394e80b"
          },
          "dependencies": [
            "module.sgs.aws_security_group.allow_http_all",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.module.vpc.aws_vpc_endpoint.config",
            "module.vpc.module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.module.vpc.aws_vpc_endpoint.events",
            "module.vpc.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.module.vpc.aws_vpc_endpoint.states",
            "module.vpc.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_all",
      "provider": "module.sgs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:security-group/sg-0f68191c211ec5469",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f68191c211ec5469",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP allow all",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_all",
            "name_prefix": "",
            "owner_id": "210780328849",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c53ae7fc7394e80b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.module.vpc.aws_vpc_endpoint.config",
            "module.vpc.module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.module.vpc.aws_vpc_endpoint.events",
            "module.vpc.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.module.vpc.aws_vpc_endpoint.states",
            "module.vpc.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_all",
      "provider": "module.sgs.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:security-group/sg-02d163ad1a604af0b",
            "description": "Allow  SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d163ad1a604af0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH allow all",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_all",
            "name_prefix": "",
            "owner_id": "210780328849",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c53ae7fc7394e80b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_endpoint.access_analyzer",
            "module.vpc.module.vpc.aws_vpc_endpoint.acm_pca",
            "module.vpc.module.vpc.aws_vpc_endpoint.apigw",
            "module.vpc.module.vpc.aws_vpc_endpoint.appmesh_envoy_management",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.appstream_streaming",
            "module.vpc.module.vpc.aws_vpc_endpoint.athena",
            "module.vpc.module.vpc.aws_vpc_endpoint.auto_scaling_plans",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloud_directory",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudformation",
            "module.vpc.module.vpc.aws_vpc_endpoint.cloudtrail",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.codeartifact_repositories",
            "module.vpc.module.vpc.aws_vpc_endpoint.codebuild",
            "module.vpc.module.vpc.aws_vpc_endpoint.codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy",
            "module.vpc.module.vpc.aws_vpc_endpoint.codedeploy_commands_secure",
            "module.vpc.module.vpc.aws_vpc_endpoint.codepipeline",
            "module.vpc.module.vpc.aws_vpc_endpoint.config",
            "module.vpc.module.vpc.aws_vpc_endpoint.datasync",
            "module.vpc.module.vpc.aws_vpc_endpoint.dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint.ebs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2_autoscaling",
            "module.vpc.module.vpc.aws_vpc_endpoint.ec2messages",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_agent",
            "module.vpc.module.vpc.aws_vpc_endpoint.ecs_telemetry",
            "module.vpc.module.vpc.aws_vpc_endpoint.efs",
            "module.vpc.module.vpc.aws_vpc_endpoint.elastic_inference_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticbeanstalk_health",
            "module.vpc.module.vpc.aws_vpc_endpoint.elasticloadbalancing",
            "module.vpc.module.vpc.aws_vpc_endpoint.emr",
            "module.vpc.module.vpc.aws_vpc_endpoint.events",
            "module.vpc.module.vpc.aws_vpc_endpoint.git_codecommit",
            "module.vpc.module.vpc.aws_vpc_endpoint.glue",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_firehose",
            "module.vpc.module.vpc.aws_vpc_endpoint.kinesis_streams",
            "module.vpc.module.vpc.aws_vpc_endpoint.kms",
            "module.vpc.module.vpc.aws_vpc_endpoint.lambda",
            "module.vpc.module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.module.vpc.aws_vpc_endpoint.monitoring",
            "module.vpc.module.vpc.aws_vpc_endpoint.qldb_session",
            "module.vpc.module.vpc.aws_vpc_endpoint.rds",
            "module.vpc.module.vpc.aws_vpc_endpoint.rekognition",
            "module.vpc.module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_api",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_notebook",
            "module.vpc.module.vpc.aws_vpc_endpoint.sagemaker_runtime",
            "module.vpc.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.vpc.module.vpc.aws_vpc_endpoint.servicecatalog",
            "module.vpc.module.vpc.aws_vpc_endpoint.ses",
            "module.vpc.module.vpc.aws_vpc_endpoint.sms",
            "module.vpc.module.vpc.aws_vpc_endpoint.sns",
            "module.vpc.module.vpc.aws_vpc_endpoint.sqs",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssm",
            "module.vpc.module.vpc.aws_vpc_endpoint.ssmmessages",
            "module.vpc.module.vpc.aws_vpc_endpoint.states",
            "module.vpc.module.vpc.aws_vpc_endpoint.storagegateway",
            "module.vpc.module.vpc.aws_vpc_endpoint.sts",
            "module.vpc.module.vpc.aws_vpc_endpoint.textract",
            "module.vpc.module.vpc.aws_vpc_endpoint.transfer",
            "module.vpc.module.vpc.aws_vpc_endpoint.transferserver",
            "module.vpc.module.vpc.aws_vpc_endpoint.workspaces",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.intra_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.private_s3",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_dynamodb",
            "module.vpc.module.vpc.aws_vpc_endpoint_route_table_association.public_s3",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.access_analyzer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.acm_pca",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.apigw",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appmesh_envoy_management",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.appstream_streaming",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.athena",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.auto_scaling_plans",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloud_directory",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudformation",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.cloudtrail",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codeartifact_repositories",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codebuild",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codedeploy_commands_secure",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.codepipeline",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.config",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.datasync",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.dynamodb",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ebs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2_autoscaling",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ec2messages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecr_dkr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_agent",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ecs_telemetry",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.efs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elastic_inference_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticbeanstalk_health",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.elasticloadbalancing",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.emr",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.events",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.git_codecommit",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.glue",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_firehose",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kinesis_streams",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.kms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.lambda",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.logs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.monitoring",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.qldb_session",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rds",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.rekognition",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.s3",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_api",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_notebook",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sagemaker_runtime",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.secretsmanager",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.servicecatalog",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ses",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sms",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sns",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sqs",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssm",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.ssmmessages",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.states",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.storagegateway",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.sts",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.textract",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transfer",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.transferserver",
            "module.vpc.module.vpc.data.aws_vpc_endpoint_service.workspaces"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:internet-gateway/igw-0eb381224dac36984",
            "id": "igw-0eb381224dac36984",
            "owner_id": "210780328849",
            "tags": {
              "Environment": "dev",
              "Name": "justin-demo-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c53ae7fc7394e80b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eb381224dac36984",
            "id": "r-rtb-0925d5a7e0e2e1d9e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0925d5a7e0e2e1d9e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0925d5a7e0e2e1d9e",
            "owner_id": "210780328849",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb381224dac36984",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "justin-demo-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c53ae7fc7394e80b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04487dceb38c16a4b",
            "route_table_id": "rtb-0925d5a7e0e2e1d9e",
            "subnet_id": "subnet-0f7749f9f5dba3d2b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080d7544b3cf808b4",
            "route_table_id": "rtb-0925d5a7e0e2e1d9e",
            "subnet_id": "subnet-0eb297f9f090092da"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0729b679f5040a63c",
            "route_table_id": "rtb-0925d5a7e0e2e1d9e",
            "subnet_id": "subnet-00f46bbc5a7b203af"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:subnet/subnet-0f7749f9f5dba3d2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.101.0/24",
            "id": "subnet-0f7749f9f5dba3d2b",
            "map_public_ip_on_launch": true,
            "owner_id": "210780328849",
            "tags": {
              "Environment": "dev",
              "Name": "justin-demo-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c53ae7fc7394e80b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:subnet/subnet-0eb297f9f090092da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.102.0/24",
            "id": "subnet-0eb297f9f090092da",
            "map_public_ip_on_launch": true,
            "owner_id": "210780328849",
            "tags": {
              "Environment": "dev",
              "Name": "justin-demo-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c53ae7fc7394e80b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:subnet/subnet-00f46bbc5a7b203af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.103.0/24",
            "id": "subnet-00f46bbc5a7b203af",
            "map_public_ip_on_launch": true,
            "owner_id": "210780328849",
            "tags": {
              "Environment": "dev",
              "Name": "justin-demo-vpc-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c53ae7fc7394e80b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:vpc/vpc-0c53ae7fc7394e80b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-096a52326359724e8",
            "default_route_table_id": "rtb-0d1f6748922ec00f2",
            "default_security_group_id": "sg-0481896670f1c55a6",
            "dhcp_options_id": "dopt-c09eecbb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c53ae7fc7394e80b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d1f6748922ec00f2",
            "owner_id": "210780328849",
            "tags": {
              "Environment": "dev",
              "Name": "justin-demo-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}